fixed some wrapping issues

--- a/src/index.css
+++ b/src/index.css
@@ -109,12 +109,13 @@ ul {
 
 .box {
     display: flex;
+    flex-wrap: wrap;
     box-sizing: border-box;
     padding: 1rem;
 }
 
 .head {
-    padding: 10rem;
+    padding-top: 10rem;
 }
 
 .head img {
